react redux cart complete

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -73,26 +73,13 @@ h3 {
   flex-direction: column;
   overflow:hidden;
 }
+.addItemToCart {
+  font-size: 25px;
+  font-family: monospace;
+  font-weight: 300;
+}
 .cartContent::-scrollbar {
   display: none; 
-}
-.singleCartProduct {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 20px 0;
-}
-.singleCartProduct > div {
-  width: 60%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.singleCartProduct > img {
-  width: 45%;
-  margin: 0;
-  height: 100px;
 }
 ul {
   list-style-type: none;
