refactor done, css rewritten to css

--- a/src/containers/Filters/Filters.css
+++ b/src/containers/Filters/Filters.css
@@ -1,5 +1,5 @@
 #filtersWrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center; }
