--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,70 +1,41 @@
-h3,
-ul,
-h2 {
-  margin: 0;
-  font-family: monospace;
-}
-h3 {
-  font-size: 25px;
-  font-family: monospace;
-}
-.removeItem {
-  outline: none;
-  background-color: white;
-  color: black;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  border: black 1px solid;
-  color: black;
-  padding: 15px 32px;
-  text-decoration: none;
-  font-size: 15px;
-  margin: 6px 2px;
-  cursor: pointer;
-  font-family: monospace;
-}
-.removeItem:hover {
-  color: #f1e3e3;
-  background-color: #292626;
-}
 .cart {
   position: fixed;
   right: 10px;
   top: 10px;
   cursor: pointer;
-  z-index: 6;
-}
-.cartIcon {
-  width: 45px;
-  height: 45px;
-  background-size: 45px 45px;
-}
-.cartIcon:hover {
-  opacity: 0;
-}
-.cartContent {
-  right: 0;
-  top: 0;
-  height: 100vh;
-  width: 30vw;
-  background-color: white;
-  color: black;
-  overflow: scroll;
-  position: fixed !important;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  overflow:hidden;
-}
-.addItemToCart {
-  font-size: 25px;
-  font-family: monospace;
-  font-weight: 300;
-}
-.cartContent::-scrollbar {
-  display: none; 
-}
-ul {
-  list-style-type: none;
-  width: 89%;
-}
+  z-index: 6; }
+  .cart .cartIcon {
+    width: 45px;
+    height: 45px;
+    background-size: 45px 45px; }
+    .cart .cartIcon:hover {
+      opacity: 0; }
+  .cart .cartContent {
+    right: 0;
+    top: 0;
+    height: 100vh;
+    width: 30vw;
+    overflow: scroll;
+    position: fixed !important;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    color: black;
+    border: none; }
+    .cart .cartContent::-scrollbar {
+      display: none; }
+  .cart .addItemToCart {
+    font-size: 25px;
+    font-family: monospace;
+    font-weight: 300; }
+  .cart h3,
+  .cart ul,
+  .cart h2 {
+    margin: 0;
+    font-family: monospace; }
+  .cart h3 {
+    font-size: 25px;
+    font-family: monospace; }
