--- a/src/components/Cart/CartItems/CartItem/Cartitem.css
+++ b/src/components/Cart/CartItems/CartItem/Cartitem.css
@@ -1,18 +1,42 @@
+@keyframes enteredAnimation {
+  from {
+    transform: translateX(-300%);
+    z-index: 5; }
+  to {
+    transform: translateX(0%);
+    z-index: 1; } }
+
 .singleCartProduct {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 20px 0;
-  }
+  margin: 20px 0;
+  animation: enteredAnimation 0.8s forwards;
+  transition: 0.1s transform;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center; }
   .singleCartProduct > div {
     width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-  }
+    justify-content: center; }
   .singleCartProduct > img {
     width: 45%;
     margin: 0;
-    height: 100px;
-  }
+    height: 100px; }
+  .singleCartProduct .removeItem {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    outline: none;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    padding: 15px 32px;
+    text-decoration: none;
+    font-size: 15px;
+    margin: 6px 2px;
+    cursor: pointer;
+    font-family: monospace; }
+    .singleCartProduct .removeItem:hover {
+      background-color: #292626;
+      color: #f1e3e3;
+      border: 1px solid black; }
