--- a/src/components/Products/SizeButton/SizeButton.css
+++ b/src/components/Products/SizeButton/SizeButton.css
@@ -1,5 +1,4 @@
 .clickedButton {
-    background-color: black !important;
-    color: white !important;
-    border: 1px solid #42420c !important;
-  }
+  background-color: black !important;
+  color: white !important;
+  border: 1px solid #42420c !important; }
