--- a/src/containers/Products/Product/Product.css
+++ b/src/containers/Products/Product/Product.css
@@ -1,89 +1,74 @@
-
-li {
-    animation: enteredAnimation 0.8s forwards;
-    transform: translateX(-300%);
-    z-index: 1;
-    list-style-type: none;
-    font-family: monospace;
-  }
-  @keyframes enteredAnimation {
-    from {
-      transform: translateX(-300%);
-      z-index: 5;
-      
-    }
-    to {
-      transform: translateX(0%);
-      z-index: 1;
-    }
-  }
-  .sizes {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  .sizes > div {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-  }
-  .sizes > div > button {
-    margin: 5px;
-    border-radius: 50%;
-    outline: none;
-    border: 1px solid #585858;
-    color: #712b2b;
-    background-color: white;
-    width: 2em;
-    height: 2em;
-    outline: none;
-  }
-  .addProduct {
-    margin: 10px 0;
-    background-color: black;
-    color: white;
-    border: 1px solid black;
-    width: 80%;
-    padding: 1em 0;
-    font-size: 1em;
-    transition: 0.1s color, 0.2s background-color;
-  }
-  .addProduct:hover {
-    background-color: white;
-    color: #000000;
-  }
-  p {
-    margin: 5px 0;
-    font-size: 1.2em;
-  }
-  img {
-    width: 95%;
-  }
-  .productPrice {
-    font-family: monospace;
-  }
-  .productName {
-    font-size: 1.7em;
-    margin-top: 10px;
-  }
-
-  .singleProduct {
-    list-style-type: none;
-    width: 30%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 10px;
-    border: 1px solid black;
-    padding: 20px;
-    box-sizing: border-box;
-    transition: 0.1s transform;
-  }
+.singleProduct {
+  animation: enteredAnimation 0.8s forwards;
+  transform: translateX(-300%);
+  z-index: 1;
+  list-style-type: none;
+  font-family: monospace;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  border: 1px solid black;
+  padding: 20px;
+  box-sizing: border-box;
+  transition: 0.1s transform; }
   .singleProduct:hover {
     background-color: #fdfbe7;
     transform: scale(1.05);
     z-index: 2;
-    box-shadow: 0 0 20px #000;
-  }
+    box-shadow: 0 0 20px #000; }
+  .singleProduct .productPrice {
+    font-family: monospace; }
+  .singleProduct .productName {
+    font-size: 1.7em;
+    margin-top: 10px; }
+  .singleProduct img {
+    width: 95%; }
+
+@keyframes enteredAnimation {
+  from {
+    transform: translateX(-300%);
+    z-index: 5; }
+  to {
+    transform: translateX(0%);
+    z-index: 1; } }
+
+.sizes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+  .sizes > div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around; }
+    .sizes > div > button {
+      margin: 5px;
+      border-radius: 50%;
+      outline: none;
+      background-color: white;
+      color: #712b2b;
+      border: 1px solid #585858;
+      width: 2em;
+      height: 2em; }
+
+.addProduct {
+  margin: 10px 0;
+  background-color: black;
+  color: white;
+  border: 1px solid black;
+  width: 80%;
+  padding: 1em 0;
+  font-size: 1em;
+  transition: 0.1s color, 0.2s background-color; }
+  .addProduct:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black; }
+
+p {
+  margin: 5px 0;
+  font-size: 1.2em; }
